config app e criacao header

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./scss/utilities/typography.scss";
+@import "./scss/utilities/color.scss";
+@import "./scss/utilities/components.scss";
+
