modificacoes banner e cores

--- a/src/scss/utilities/color.scss
+++ b/src/scss/utilities/color.scss
@@ -15,6 +15,10 @@ $bg-shoes: #EBE9EA;
   background-color: $primary;
 }
 
+.bg-secondary {
+  background-color: $secondary;
+}
+
 .bg-shoes {
   color: $bg-shoes;
 }
