--- a/src/app/layout/default/default.component.html
+++ b/src/app/layout/default/default.component.html
@@ -1,6 +1,40 @@
 <header>
   <app-header></app-header>
 </header>
-<section>
+
+<article>
   <app-banner></app-banner>
-</section>
+</article>
+
+<article>
+  <h2 class="font-l container">Mais populares</h2>
+  <app-carousel></app-carousel>
+</article>
+
+<article class="art-bg">
+  <div class="content-middle container font-l">
+    <img src="../../../assets/img/2cd43b_54b6a526445f4507b581e9bd5da7084b_mv2.png" alt="">    
+    <h3>Uma enterrada de preços</h3>
+  </div>
+</article>
+
+
+<main>
+
+  <aside>
+    <app-filter></app-filter>
+  </aside>
+
+  <!-- <article>
+    <app-shoes></app-shoes>
+  </article> -->
+  
+</main>
+
+<!-- <h1>Filtro</h1>
+<ul>
+  <li>Cor</li>
+  <li>Tamanho</li>
+  <li>Preço</li>
+  <li>Modelo</li>
+</ul> -->
