--- a/src/app/layout/shared/banner/banner.component.html
+++ b/src/app/layout/shared/banner/banner.component.html
@@ -4,9 +4,9 @@
             <img src="../../../../assets/img/wallpaper.jpeg" alt="Par de tênis Jordan" width="1024" height="683">
         </picture>
         <div class="main-content">
-            <h1 class="font-l">Modelos limitados esperando por você<span style="color:orange;">.</span></h1>
-            <p class="font-m500">Os melhores modelos de tênis de basquete com maior amortecimento e flexibilidade para o seu jogo. Chegue dominando nas quadras.</p>
-            <p class="font-s">Cupom de 10% na sua primeira compra e frete grátis.</p>
+            <h1 class="font-l primary">Modelos limitados esperando por você<span style="color:orange;">.</span></h1>
+            <p class="font-m500 primary">Os melhores modelos de tênis de basquete com maior amortecimento e flexibilidade para o seu jogo. Chegue dominando nas quadras.</p>
+            <p class="font-s bg-shoes">Cupom de 10% na sua primeira compra e frete grátis.</p>
         </div>
     </div>
 </main>
