--- a/src/scss/utilities/color.scss
+++ b/src/scss/utilities/color.scss
@@ -3,6 +3,10 @@ $primary: #F9F9F9;
 $secondary: #181818;
 $bg-shoes: #EBE9EA;
 
+
+$new-bg-shoes: #E0E1DD;
+$new-secondary: #1D2639;
+
 .primary {
   color: $primary;
 }
