--- a/src/scss/utilities/components.scss
+++ b/src/scss/utilities/components.scss
@@ -12,3 +12,31 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.container-shoes {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  // padding-left: 40px;
+  // padding-right: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.shoes {
+  background-color: $bg-shoes;
+  border-radius: 4px;
+  // padding: 60px 10px;
+  padding: 20px 10px;
+  display: flex;
+  width: 250px;
+}
+
+.shoes img {
+  width: 250px;
+  height: 150px;
+}
